--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/comp426-2022-spring/a02-elliottsikes/issues"
   },
-  "homepage": "https://github.com/comp426-2022-spring/a02-elliottsikes#readme"
+  "homepage": "https://github.com/comp426-2022-spring/a02-elliottsikes#readme",
+  "dependencies": {
+    "minimist": "^1.2.6"
+  }
 }
